--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -51,24 +51,24 @@ spring:
         login-username: admin
         login-password: admin
         url-pattern: /druid/*
-#  redis:
-          ##    database: 0
-          ##    host: 175.24.121.139
-          ##    port: 7000
-          ##    password: admin
-          ##    jedis:
-          ##      pool:
-          ##        max-active: 30  # 连接池最大连接数（使用负值表示没有限制）
-          ##        max-wait: -1  # 连接池最大阻塞等待时间（使用负值表示没有限制）
-          ##        max-idle: 30  # 连接池中的最大空闲连接
-          ##        min-idle: 7  # 连接池中的最小空闲连接
-          ##    timeout: 6000  # 连接超时时间（毫秒）
-          ##  rabbitmq:
-          ##    host: 175.24.121.139
-          ##    port: 7001
-          ##    username: admin
-        ##    password: admin
-        ##    virtual-host: admin
+  redis:
+    database: 0
+    host: 175.24.121.139
+    port: 7000
+    password: admin
+    jedis:
+      pool:
+        max-active: 30  # 连接池最大连接数（使用负值表示没有限制）
+        max-wait: -1  # 连接池最大阻塞等待时间（使用负值表示没有限制）
+        max-idle: 30  # 连接池中的最大空闲连接
+        min-idle: 7  # 连接池中的最小空闲连接
+    timeout: 6000  # 连接超时时间（毫秒）
+  rabbitmq:
+    host: 175.24.121.139
+    port: 7001
+    username: admin
+    password: admin
+    virtual-host: admin
 
   main:
     allow-bean-definition-overriding: true
@@ -119,7 +119,7 @@ location:
   appKey: Y8125nlttvjMzqrK9n4mVEnNYnmccfoq   # 百度应用访问key,申请并激活百度开发者账号,创建个应用就可以获得
 
 swagger:
-  basePackage: com.william.boss
+  basePackage: com.summer.boss
   description: 项目接口文档url (http://localhost[:port]/doc.html)
   globalParams:
     - name: token
