--- a/pom.xml
+++ b/pom.xml
@@ -26,6 +26,7 @@
         <bcprov.version>1.67</bcprov.version>
         <fastjson.version>1.2.76</fastjson.version>
         <dynamic-datasource.version>3.4.0</dynamic-datasource.version>
+        <security.oauth2.version>2.5.1.RELEASE</security.oauth2.version>
     </properties>
 
     <dependencies>
@@ -47,15 +48,16 @@
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-thymeleaf</artifactId>
-        </dependency>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-web</artifactId>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-security</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>org.springframework.security.oauth</groupId>
+            <artifactId>spring-security-oauth2</artifactId>
+            <version>${security.oauth2.version}</version>
         </dependency>
         <dependency>
             <groupId>org.springframework.boot</groupId>
